app-manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mtls-on-eks
  labels:
    mesh: mtls-on-eks
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color
  namespace: mtls-on-eks
spec:
  awsName: color.mtls-on-eks.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: mtls-on-eks
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: mtls-on-eks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: app
          image: 600432944642.dkr.ecr.ap-northeast-1.amazonaws.com/mtls-on-eks/feapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-blue
  namespace: mtls-on-eks
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: mtls-on-eks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      labels:
        app: color
        version: blue
    spec:
      containers:
        - name: app
          image: 600432944642.dkr.ecr.ap-northeast-1.amazonaws.com/mtls-on-eks/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-red
  namespace: mtls-on-eks
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: mtls-on-eks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      labels:
        app: color
        version: red
    spec:
      containers:
        - name: app
          image: 600432944642.dkr.ecr.ap-northeast-1.amazonaws.com/mtls-on-eks/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: mtls-on-eks
spec:
  ports:
    - port: 8080
      name: http
